name:                typed-seq
version:             0.1.1.0
-- synopsis:            
-- description:         
license:             BSD3
author:              Aleksey Kliger
maintainer:          aleksey.kliger@baesystems.com
-- copyright:           
category:            Control
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

library
  exposed-modules:     Control.Monad.FreeReflect, Data.TypedSequence
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base >= 4.6 && < 4.8
  -- hs-source-dirs:      
  default-language:    Haskell2010
  ghc-options:         -Wall

test-suite tree
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Tree.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.6 && < 4.8
                       , HUnit == 1.2.*
                       , typed-seq

test-suite state
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             State.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.6 && < 4.8
                       , HUnit == 1.2.*
                       , mtl >= 2.1.2 && < 2.3
                       , typed-seq